ajustes entregáveis fase 1
